web/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    berlioz_managed: "true"
    cluster: hello
    deployment: gext
    name: gext-hello-main-web
    sector: main
    service: web
  name: gext-hello-main-web
  namespace: hello
  selfLink: /apis/extensions/v1beta1/namespaces/hello/deployments/gext-hello-main-web
  uid: bbaaa701-9c38-11e9-93d8-42010a8a00a5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: gext-hello-main-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        berlioz_managed: "true"
        cluster: hello
        deployment: gext
        name: gext-hello-main-web
        sector: main
        service: web
    spec:
      containers:
      - env:
        - name: BERLIOZ_TASK_ID
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.uid
        - name: BERLIOZ_IDENTITY
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: BERLIOZ_ADDRESS
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.podIP
        - name: BERLIOZ_INSTANCE_ID
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: spec.nodeName
        - name: BERLIOZ_HOST_IP
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.hostIP
        - name: BERLIOZ_AGENT_PATH
          value: ws://${BERLIOZ_HOST_IP}:55555/${BERLIOZ_TASK_ID}
        - name: BERLIOZ_LISTEN_ADDRESS
          value: 0.0.0.0
        - name: BERLIOZ_INFRA
          value: k8s
        - name: BERLIOZ_REGION
          value: us-west1
        - name: BERLIOZ_CLUSTER
          value: hello
        - name: BERLIOZ_SECTOR
          value: main
        - name: BERLIOZ_SERVICE
          value: web
        - name: BERLIOZ_IDENTITY_PREFIX
          value: gext-hello-main-web-
        - name: BERLIOZ_LISTEN_PORT_DEFAULT
          value: "3000"
        - name: BERLIOZ_PROVIDED_PORT_DEFAULT
          value: "3000"
        - name: GOOGLE_APPLICATION_CREDENTIALS
          value: /var/secrets/google/service-key.json
        image: gcr.io/berlioz-external/hello-main-web@sha256:4f0acbf994e85cc72300630907b555c0420258c85d78b758f21e2ad941e7012a
        imagePullPolicy: IfNotPresent
        name: gext-hello-main-web
        ports:
        - containerPort: 3000
          name: default
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/secrets/google
          name: google-cloud-key
      dnsPolicy: ClusterFirst
      priorityClassName: berlioz-normal-priority
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: google-cloud-key
        secret:
          defaultMode: 420
          secretName: gext-hello-main-web
